--- a/zoo/style.css
+++ b/zoo/style.css
@@ -2,7 +2,13 @@
 body {background-color:rgb(255,255,59);
 }
 header {background-color:red;}
+p{
+font-size:16pt;
+font-family:"Helvetica",sans-serif;
+}
 th,td,table {border: 1px solid;
-border-collapse: collapse;}
+border-collapse: collapse;
+font-size:16pt;
+font-family:"Helvetica",sans-serif;}
 
 
